Give header a max-width to prevent exceeding the viewport on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -33,6 +33,7 @@ $spacing-buttons: $spacing-body / 2;
 
 .__header {
   width: 100%;
+  max-width: 100%;
   padding: $spacing-viewport $spacing-body;
   margin: 0 auto;
 
